Updating rooftop database

--- a/data/rooftops.yml
+++ b/data/rooftops.yml
@@ -4,4 +4,6 @@ ruby:
   location: Shoreditch, London
   rating: 4
   description: Better than any PHP bar in London. This rooftop offers fantastic gem-themed cocktails with a wide pice range to suit any budget. With large sofa areas to relax in, it is a perfect destination for any group.
-
+  tube-travel-time: 5 mins from Liverpool Street Station
+  wifi: Free wifi
+  max-occupancy: 100
