--- a/data/rooftops.yml
+++ b/data/rooftops.yml
@@ -1,9 +1,50 @@
 ruby:
-  owner: Sebastien
-  owner-photo: seb-rooftop.jpg
+  owner_name: Sebastien
+  owner_photo: seb.jpg
+  rooftop_photo: seb-rooftop.jpg
+  rooftop_name: Ruby
   location: Shoreditch, London
   rating: 4
   description: Better than any PHP bar in London. This rooftop offers fantastic gem-themed cocktails with a wide pice range to suit any budget. With large sofa areas to relax in, it is a perfect destination for any group.
-  tube-travel-time: 5 mins from Liverpool Street Station
+  type_of_drinks: Cocktails
   wifi: Free wifi
-  max-occupancy: 100
+  tube_travel_time: 10 mins from Liverpool Street Station
+  max_occupancy: 100
+le_wagon:
+  owner_name: Romain
+  owner_photo: romain.jpg
+  rooftop_photo: romain-rooftop.jpg
+  rooftop_name: Le Wagon
+  location: Shoreditch, London
+  rating: 5
+  description: Coding themed bar with stunning views of a construction site. Situated on Elder Street, this incredible rooftop is a stones throw from the edgy Spitalfields market.
+  type_of_drinks: Spirits and mixers
+  wifi: Free wifi
+  tube_travel_time: 5 mins from Shoreditch High Street station
+  max_occupancy: 120
+snails_delight:
+  owner_name: Boris
+  owner_photo: boris.jpg
+  rooftop_photo: boris-rooftop.jpg
+  rooftop_name: Snail's Delight
+  location: Canary Wharf, London
+  rating: 2
+  description: London's best French rooftop, serving cheese and snail platters all night. This bar offers incredible views of Canary Wharf, with an equally stunning atmosphere. Snail's Delight is a particularly popular destination with the local workers in the City.
+  type_of_drinks: French
+  wifi: Free wifi
+  tube_travel_time: 2 mins from South Quay DLR station or 5 mins from Canary Wharf tube station.
+  max_occupancy: 150
+afrikaans_adventure:
+  owner_name: Edward
+  owner_photo: edward.jpg
+  rooftop_photo: edward-rooftop.jpg
+  rooftop_name: Afrikaans Adventure
+  location: Botswana, London
+  rating: 5
+  description: This rooftop draws inspiration from Bostwana rich history with many authentic Bostwanan drinks. Afrikaans Adventure is highly popular with London's university students with its daily happy hour from 17:00 to 19:00. The bar has beautiful interior design features with authentic decoration.
+  type_of_drinks: Spirits and mixers
+  wifi: Free wifi
+  tube_travel_time: 5 mins from Shoreditch High Street station
+  max_occupancy: 40
+
+
