--- a/data/rooftops.yml
+++ b/data/rooftops.yml
@@ -4,6 +4,8 @@ ruby:
   rooftop_photo: seb-rooftop.jpg
   rooftop_name: Ruby
   location: Shoreditch, London
+  url: rooftops/ruby.html
+  tagline: Better than any PHP bar in London
   rating: 4
   description: |
     Better than any PHP bar in London. This rooftop offers fantastic gem-themed
@@ -13,12 +15,15 @@ ruby:
   wifi: Free wifi
   tube_travel_time: 10 mins from Liverpool Street Station
   max_occupancy: 100
+
 le_wagon:
   owner_name: Romain
   owner_photo: romain.jpg
   rooftop_photo: romain-rooftop.jpg
   rooftop_name: Le Wagon
   location: Shoreditch, London
+  url: rooftops/le_Wagon.html
+  tagline: Coding themed bar with stunning views of a construction site
   rating: 5
   description: |
     Coding themed bar with stunning views of a construction site.
@@ -28,12 +33,15 @@ le_wagon:
   wifi: Free wifi
   tube_travel_time: 5 mins from Shoreditch High Street station
   max_occupancy: 120
+
 snails_delight:
   owner_name: Boris
   owner_photo: boris.jpg
   rooftop_photo: boris-rooftop.jpg
   rooftop_name: Snail's Delight
   location: Canary Wharf, London
+  url: rooftops/snail's_delight.html
+  tagline: French rooftop serving snails and cheese
   rating: 2
   description: |
     London's best French rooftop, serving cheese and snail platters all night.
@@ -44,12 +52,15 @@ snails_delight:
   wifi: Free wifi
   tube_travel_time: 2 mins from South Quay DLR station or 5 mins from Canary Wharf tube station.
   max_occupancy: 150
+
 afrikaans_adventure:
   owner_name: Edward
   owner_photo: edward.jpg
   rooftop_photo: edward-rooftop.jpg
   rooftop_name: Afrikaans Adventure
-  location: Botswana, London
+  location: Botswana
+  url: rooftops/afrikaans_adventure.html
+  tagline: Botswana themed bar with authentic drinks
   rating: 5
   description: |
     This rooftop draws inspiration from Bostwana rich history with many
